external/ag-website-shared/src/components/license-pricing/license-pricing.module.scss
@use '../../design-system' as *;

.container {
    margin-top: $spacing-size-2;
}

.topSection {
    display: flex;
    flex-wrap: wrap;
    gap: $spacing-size-8;

    @media screen and (min-width: $breakpoint-pricing-large) {
        flex-wrap: nowrap;
    }
}

.introSection {
    width: 80%;
    margin: 0 auto;
    display: flex;
    align-items: center;
    flex-direction: column;
    margin-bottom: $spacing-size-8;

    p {
        text-align: center;
        text-wrap: balance;
    }
}

.intro {
    width: 100%;
    margin-bottom: $spacing-size-8;

    p:global(.font-size-large) {
        max-width: 44rem;
        margin: 0 auto;
    }
}

.salesEmail {
    margin-top: $spacing-size-4;
    margin-bottom: $spacing-size-8;

    a {
        @media screen and (max-width: $breakpoint-pricing-small) {
            font-size: var(--text-fs-base);
        }
    }

    svg {
        height: 32px;
        width: 32px;
    }
}

.videoPrompt {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: flex-start;
    text-align: center;
    gap: $spacing-size-2 $spacing-size-4;
    margin: 0 auto;
    margin-top: $spacing-size-12;
    line-height: var(--text-lh-tight);
    max-width: 600px;
    padding: $spacing-size-3;
    border: 1px solid var(--color-border-primary);
    border-radius: var(--radius-md);

    @media screen and (min-width: $breakpoint-pricing-small) {
        text-align: left;
    }

    @media screen and (min-width: $breakpoint-pricing-large) {
        justify-content: flex-start;
    }

    h3,
    p {
        margin: 0;
    }
}

.thumbnail {
    width: 33.333%;
    min-width: 160px;
    max-width: 220px;
    border-radius: var(--radius-md);
    img {
        width: 100%;
        aspect-ratio: 16 / 9;
        object-fit: cover;
        border-radius: var(--radius-md);
    }
}

.licensesOuter {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    // gap: $spacing-size-8;
    padding-top: $spacing-size-5;
}

.buyTogether {
    --card-color: var(--color-bg-primary);
    --header-tint: 0.95;

    width: 100%;
    display: flex;
    border-radius: 5px;
    border: 1px solid var(--color-border-primary);
    background-color: var(--card-color);

    #{$selector-darkmode} & {
        --card-color: var(--background-100);

        border: 2px solid var(--color-brand-500);
    }
}

.buyTogetherInner {
    width: 100%;
    padding: $spacing-size-4;
    text-align: center;
    border-radius: var(--border-radius);
    background-color: var(--default-background-color);
    opacity: var(--header-tint);

    @media screen and (min-width: $breakpoint-pricing-medium) {
        display: grid;
        grid-template: auto auto / auto auto;
        padding: $spacing-size-4;
        text-align: left;
    }

    p {
        margin-bottom: 0;
    }
}

.left {
    display: flex;
    flex-direction: column;

    @media screen and (min-width: $breakpoint-pricing-medium) {
        width: calc(50% - $spacing-size-4);
    }

    p {
        line-height: var(--text-lh-tight);
    }
}

.products {
    width: 100%;
    font-size: var(--text-fs-2xl);

    span {
        margin-left: -$spacing-size-3;
        margin-right: -$spacing-size-2;
        color: #00366d;

        #{$selector-darkmode} & {
            color: var(--color-fg-primary) !important;
        }
    }
}

.productLogos svg {
    height: 54px;
    width: fit-content;

    #{$selector-darkmode} & {
        :global(#LogoType) * {
            fill: var(--color-fg-primary) !important;
        }
    }
}

.enterpriseProducts {
    margin-top: $spacing-size-2;
    margin-bottom: $spacing-size-6;

    @media screen and (min-width: $breakpoint-pricing-medium) {
        margin-top: $spacing-size-1;
        margin-bottom: auto;
    }

    :global(.icon) {
        --icon-size: #{$spacing-size-4};

        fill: var(--color-text-secondary);

        margin-top: -1px;
        margin-left: -1px;
        opacity: 0.6666;
    }
}

.buyTogetherPrice {
    text-align: center;
    color: var(--color-fg-primary);

    @media screen and (min-width: $breakpoint-pricing-medium) {
        text-align: right;
    }

    p {
        font-weight: var(--text-bold);
        line-height: var(--text-lh-ultra-tight);
    }

    p:first-child {
        margin-bottom: $spacing-size-1;
    }

    p:last-child {
        margin-top: $spacing-size-1;
    }
}

.buyTogetherConfigureButton {
    width: 100%;
    margin-top: $spacing-size-6;

    @media screen and (min-width: $breakpoint-pricing-medium) {
        grid-area: 2 / 1 / 2 / 3;
        text-align: center;
    }
}

.price {
    font-size: 46px !important; // !important for font-size weirdness
    line-height: var(--text-lh-tight);
    font-weight: var(--text-bold);
    letter-spacing: -0.05em;
}

.configure button:not([class^='ag-']) {
    width: 100%;
    height: 100%;
}

.bulkLicenses,
.licensesInDetail {
    margin-bottom: $spacing-size-24;
}

.bulkLicenses {
    margin-top: $spacing-size-10;
    text-align: center;

    p {
        max-width: 48em;
        margin: 0 auto $spacing-size-2;
    }
}
/* ... */

